--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@ Janaka Edirisinghe, Chris Henry, Ross Overbeek and others at <a href="http://www
 <h2>
 <a id="installing-pyfba" class="anchor" href="#installing-pyfba" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installing PyFBA</h2>
 
-<p>To use PyFBA you need Python 2.7 or greater, and you need to <a href="INSTALLATION.md">install the GNU GLPK</a> and a Python
+<p>To use PyFBA you need Python 2.7 or greater, and you need to <a href="docs/INSTALLATION.html">install the GNU GLPK</a> and a Python
 wrapper for that program, pyGLPK available from <a href="https://github.com/bradfordboyle/pyglpk">github</a>. </p>
 
 <p>We also leverage the <a href="https://github.com/ModelSEED/ModelSEEDDatabase.git">Model SEED GitHub</a> repository with all the
 latest biochemistry tables. </p>
 
-<p>Our <a href="INSTALLATION.md">installation</a> page has detailed instructions on installing PyFBA and getting everything running.</p>
+<p>Our <a href="docs/INSTALLATION.html">installation</a> page has detailed instructions on installing PyFBA and getting everything running.</p>
 
 <h2>
 <a id="getting-started-with-pyfba" class="anchor" href="#getting-started-with-pyfba" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started with PyFBA</h2>
 
 <p>Once you have installed GLPK, PyGLPK, and PyFBA, you will most likely want to build a model from a genome, gap fill that
-model, and test it for growth on different media. We have <a href="GETTING_STARTED.md">detailed instructions</a> that walk you through the step-by-step
+model, and test it for growth on different media. We have <a href="docs/GETTING_STARTED.html">detailed instructions</a> that walk you through the step-by-step
 procedures that you need to use to run flux balance analysis on your own genome.</p>
 
 <h3>
