--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ wrapper for that program, pyGLPK available from <a href="https://github.com/brad
 <p>We also leverage the <a href="https://github.com/ModelSEED/ModelSEEDDatabase.git">Model SEED GitHub</a> repository with all the
 latest biochemistry tables. </p>
 
+<p>You can install PyFBA from the PyPi resource very simply with the command:</p>
+<pre><code>pip install PyFBA</code</pre>
+
 <p>Our <a href="docs/INSTALLATION.html">installation</a> page has detailed instructions on installing PyFBA and getting everything running.</p>
 
 <h2>
