--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@ wrapper for that program, pyGLPK available from <a href="https://github.com/brad
 latest biochemistry tables. </p>
 
 <p>You can install PyFBA from the PyPi resource very simply with the command:</p>
-<pre><code>pip install PyFBA</code</pre>
+<pre>
+<code>
+pip install PyFBA
+</code>
+</pre>
 
 <p>Our <a href="docs/INSTALLATION.html">installation</a> page has detailed instructions on installing PyFBA and getting everything running.</p>
 
